2nd contrast fix

--- a/articles.css
+++ b/articles.css
@@ -8,7 +8,7 @@ body {
     text-decoration: none;
     }
     .navbar a:link {
-        color: rgb(126, 54, 51);
+        color: rgb(83, 4, 4);
         text-decoration: none;
     }
 .mainText a{
@@ -61,7 +61,7 @@ body {
   }
   
   .navbar a {
-    color: rgb(126, 54, 51);
+    color: rgb(83, 4, 4);
     padding: 14px 20px;
       text-decoration: none;
       text-align: center;
@@ -149,7 +149,7 @@ body {
   }
 
   .navbar a {
-    color: rgb(126, 54, 51);
+    color: rgb(83, 4, 4);
     padding: 14px 15px;
       text-decoration: none;
       text-align: center;
@@ -238,7 +238,7 @@ body {
     }
 
     .navbar a {
-        color: rgb(126, 54, 51);
+        color: rgb(83, 4, 4);
         padding: 10px 8px;
         text-decoration: none;
         text-align: center;
