--- a/contact_info.css
+++ b/contact_info.css
@@ -8,7 +8,7 @@ body {
     text-decoration: none;
     }
     .navbar a:link {
-        color: rgb(126, 54, 51);
+        color: rgb(83, 4, 4);
         text-decoration: none;
     }
 
@@ -54,7 +54,7 @@ body {
   }
   
   .navbar a {
-    color: rgb(126, 54, 51);
+    color: rgb(83, 4, 4);
     padding: 14px 20px;
       text-decoration: none;
       text-align: center;
@@ -162,7 +162,7 @@ transition: 0.3s;
   }
 
   .navbar a {
-    color: rgb(126, 54, 51);
+    color: rgb(83, 4, 4);
     padding: 14px 15px;
       text-decoration: none;
       text-align: center;
@@ -271,7 +271,7 @@ transition: 0.3s;
   }
 
   .navbar a {
-    color: rgb(126, 54, 51);
+    color: rgb(83, 4, 4);
     padding: 10px 8px;
       text-decoration: none;
       text-align: center;
