--- a/more_info.css
+++ b/more_info.css
@@ -8,7 +8,7 @@ body {
     text-decoration: none;
     }
     .navbar a:link {
-        color: rgb(126, 54, 51);
+        color: rgb(83, 4, 4);
         text-decoration: none;
     }
 
@@ -53,7 +53,7 @@ body {
   }
   
   .navbar a {
-    color: rgb(126, 54, 51);
+    color: rgb(83, 4, 4);
     padding: 14px 20px;
       text-decoration: none;
       text-align: center;
@@ -185,7 +185,7 @@ body {
   }
 
   .navbar a {
-    color: rgb(126, 54, 51);
+    color: rgb(83, 4, 4);
     padding: 14px 15px;
       text-decoration: none;
       text-align: center;
@@ -277,7 +277,7 @@ body {
   }
 
   .navbar a {
-    color: rgb(126, 54, 51);
+    color: rgb(83, 4, 4);
     padding: 10px 8px;
       text-decoration: none;
       text-align: center;
